--- a/index.html
+++ b/index.html
@@ -19,22 +19,21 @@
 		.swiper-slide{width: 100%;height: 100%;}
 		.page1{position:relative; background: url(images/c.jpg) no-repeat;-webkit-background-size: 100% 100%;
 		background-size: 100% 100%}
-		.page1-1{position: absolute;left: 0;top: 0;width: 100%;height: 50%;background:url(images/f.jpg) no-repeat;-webkit-background-size: 100% 100%;
+		.page1-1{position: absolute;left: 0;top: 0;height: 50%;width:100vw;background:url(images/f.jpg) no-repeat;-webkit-background-size: 100% 100%;
 		background-size: 100% 100%;}
-		.page1-2{position: absolute;left: 0;top: 5.6rem;width: 100%;height: 6.5rem;background-color: #000; font-size: 0.5rem;color:pink;text-align: center;}
+		.page1-2{position: absolute;left: 0;top: 50%;height:50%;background-color: #000; font-size: 0.5rem;color:pink;text-align: center;}
 		.page2{position:relative; background: url(images/d.jpg) no-repeat;-webkit-background-size: 100% 100%;
 		background-size: 100% 100%}
-		.page2-1{position: absolute;left: 0;top: 0rem;width: 100%;height: 2.17rem;}
-		 .page2 .page2-2{position: absolute;left: 0.15rem;top: 2.17rem;width: 6.12rem;height: 3.7rem;}
+		 .page2 .page2-2{position: absolute;left: 0.15rem;top: 0.15rem;width: 6.12rem;height: 3.7rem;}
 		.page2 img{width: 100%;}
 		.page2 h3{padding-top:0.5rem ;padding-left:0.8rem;font-family: "微软雅黑";font-size: 0.3rem;color: #0f1834;}	
 		.page2 p{padding-top:0.2rem;padding-left:1rem;font-family: "微软雅黑";font-size: 0.4rem;color: lightslategrey;;font-weight: 700;}
 		.page3{position:relative;background: url(images/h.jpg) no-repeat;-webkit-background-size: 100% 100%;
 		background-size: 100% 100%;opacity: 0.7}
 		.page3 img{    position: absolute;left: 0;top: 0;}
-		.page3-1{width: 100%;height: 6.19rem;background:url(images/s.jpg) no-repeat ;-webkit-background-size: 100% 100%;
+		.page3-1{width: 100%;height: 50vh;background:url(images/s.jpg) no-repeat ;-webkit-background-size: 100% 100%;
 		background-size: 100% 100%;opacity: 0.7}
-		.page3-2{position:absolute;;left: 0;top:6.2rem;width: 100%;height: 2rem;background: url(images/1.png) no-repeat;-webkit-background-size: 100% 100%;
+		.page3-2{position:absolute;;left: 0;top:50vh;width: 100%;height: 2rem;background: url(images/1.png) no-repeat;-webkit-background-size: 100% 100%;
 		background-size: 100% 100%;opacity: 0.5}	
 		.page3	p{text-align: center;font-family: "微软雅黑";font-size: 0.6rem;color: sienna;font-weight: 500;letter-spacing: 0.1rem;}
 		.page3	span{display:block;text-align: center}
@@ -51,14 +50,14 @@
 		.page5-1{width: 6.12rem;height: 4.61rem;margin: 0.15rem;background:url(images/u.jpg) no-repeat;-webkit-background-size: 100% 100%;
 		background-size: 100% 100%; opacity: 0.5 }
 		
-		.page5	h3{padding-top:0.6rem;text-align: center;font-family: "微软雅黑";font-size: 0.34rem;color:#453737;font-weight: 500;}
+		.page5	h3{padding-top:0.2rem;text-align: center;font-family: "微软雅黑";font-size: 0.34rem;color:#453737;font-weight: 500;}
 		.page5	p{padding-left:2rem;text-align: left;font-family: "微软雅黑";font-size: 0.32rem;color: #453737;font-weight: 500;padding-top: 0.1rem}
 		.page5 span{display:block;word-wrap:break-word;padding: 0.1rem 0.2rem;}
 		.page6{position:relative;background: url(images/1.jpg) no-repeat;-webkit-background-size: 100% 100%;
 		background-size: 100% 100%}
 		.girl{padding-left:1rem;font-family: "微软雅黑";font-size: 0.6rem;color: thistle;;font-weight: 500;line-height: 1.5rem;word-wrap:break-word;text-transform: uppercase;letter-spacing: 0.05rem;}
 		.girl p{font-size: 0.3rem}
-		.page6-4{width: 5.6rem;height: 2rem;margin:0 auto;padding-top:2.5rem;text-align: justify;font-family: "微软雅黑";font-size: 0.26rem;color: thistle;;font-weight: 500;line-height: 0.5rem;}
+		.page6-4{width: 5.6rem;height: 2rem;margin:0 auto;padding-top:1.5rem;text-align: justify;font-family: "微软雅黑";font-size: 0.26rem;color: thistle;;font-weight: 500;line-height: 0.5rem;}
 		.page6-4 span{float: right;word-wrap:break-word;}
 		.btn{display: block;position: fixed;right: 20px;top:20px; width: 44px;height: 44px;background: url(images/music.png) no-repeat;z-index: 100;
 		transform:rotate(0);
@@ -81,7 +80,6 @@
         </div>
 
         <div class="swiper-slide page2">
-			<div class="page2-1"></div>
 
 			<div class="page2-2 ani" swiper-animate-effect="bounceIn" swiper-animate-duration="5s" swiper-animate-delay="0.3s">
 			
